[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain"
version = "0.1.0"
description = "US nuclear supply-chain intelligence pipeline"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "sqlmodel>=0.0.22",
  "pydantic>=2.8",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
supply-chain = "supply_chain.cli:main"

[tool.setuptools.packages.find]
include = ["supply_chain*"]
